# Cipher_crack

./: .travis.yml  CMakeLists.txt  README.md  ToDo.md  install.sh
examples/: ex1.cpp  ex_Affine.cpp  ex_Caesar.cpp  ex_Polybius.cpp  ex_SimpleSubstitution.cpp  ex_Zzezar.cpp
include/: Affine.hpp  Caesar.hpp  Cipher.hpp  Console_manager.hpp  Log.hpp  Polybius.hpp  SimpleSubstitution.hpp  Vigener.hpp  Zzezar.hpp  chiper.hpp  cipher.hpp  data_alpha.hpp  data_alphabet.hpp
sources/: Affine.cpp  Caesar.cpp  Cipher.cpp  Console_manager.cpp  Log.cpp  Polybius.cpp  SimpleSubstitution.cpp  Vigener.cpp  Zzezar.cpp  cipher.cpp  english_bigrams.txt  english_trigrams.txt  file1.txt  main.cpp
tests/: Affine.cpp  Caesar.cpp  Polybius.cpp  test1.cpp
